Lecture week 6 done

--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -76,14 +76,6 @@ $$ \lim_{x  \rightarrow a} f (x ) = l $$
 An illustration of an epsilon-delta limit argument
 ```
 
-To link the limit of the function to the limit of a sequence, we can use the folloing *equivalent* definition
-```{admonition} Definition
-:class: caution
-
-The function $f: \mathbb{R} \rightarrow \mathbb{R}$ approaches the limit $l$ near [the point $x =$] $a$ if for every sequence $\{x_n\}$ such that $x_n \to a$, we have $f(x_n) \to l$.
-```
-
-
 ### The structure of $\epsilon–\delta$ arguments
 
 Suppose that we want to attempt to show that $\lim _{x \rightarrow a} f(x)=b$.
@@ -111,6 +103,40 @@ $$
 In such cases, an appropriate choice of $\delta_{\epsilon}$ is $\delta_{\epsilon}=\min \left\{\frac{\epsilon}{K}, D\right\}$.
 
 
+### Heine and Cauchy definitions of the limit for functions
+
+As a side note, let's mention that there are two ways to define the limit of a function $f$.
+
+The above $\epsilon$-$\delta$ definition is is due to *Augustin-Louis Cauchy*.
+
+The limit for functions can also be defined through the limit of sequences we were talking about in the last lecture.  This equivalent definition is due to *Eduard Heine*
+
+```{admonition} Definition (Limit of a function due to Heine)
+:class: caution
+
+Given the function $f: A \subset \mathbb{R} \to \mathbb{R}$, $a \in \mathbb{R}$ is a limit of $f(x)$ as $x \to x_0 \in A$ if
+:::{math}
+\forall \{x_n\} \in A \colon \lim_{n \to \infty} x_n = x_0 \in A
+\quad \implies \quad
+f(x_n) \to a 
+:::
+```
+
+- note the crucial requirement that $f(x_n) \to a$ has to hold *for all* converging to $x_0$ sequences $\{x_n\}$ in $A$
+- note also how the Cauchy definition is similar to the definition of a limit to a sequence
+
+```{admonition} Fact
+:class: important
+
+Cauchy and Heine definitions of the function limit are equivalent
+```
+
+Therefore we can use the same notation of the definition of the limit of a function
+:::{math}
+\lim_{x \to x_0} f(x) = a \quad \text{or} \quad f(x) \to a \; \text{as} \;  x \to x_0
+:::
+
+
 ### Some useful rules about limits
 
 - In practice, we would like to be able to find at least some limits without having to resort to the formal "epsilon-delta" arguments that define them. The following rules can sometimes assist us with this.
@@ -126,6 +152,10 @@ The following rules apply for limits:
 - $\lim _{x \rightarrow a}(f(x) g(x))=\left(\lim _{x \rightarrow a} f(x)\right)\left(\lim _{x \rightarrow a} g(x)\right)=\alpha \beta$.
 - $\lim _{x \rightarrow a}\left(\frac{f(x)}{g(x)}\right)=\frac{\lim _{x \rightarrow a} f(x)}{\lim _{x \rightarrow a} g(x)}=\frac{\alpha}{\beta}$ whenever $\beta \neq 0$.
 - $\lim _{x \rightarrow a} \sqrt[n]{f(x)}=\sqrt[n]{\lim _{x \rightarrow a} f(x)}=\sqrt[n]{\alpha}$ whenever $\sqrt[n]{\alpha}$ is defined.
+- $\lim _{x \rightarrow a} \ln f(x)=\ln \lim _{x \rightarrow a} f(x)=\ln \alpha$ whenever $\ln \alpha$ is defined.
+- $\lim _{x \rightarrow a} e^{f(x)}=\exp\big(\lim _{x \rightarrow a} f(x)\big)=e^{\alpha}$
+
+
 - After we have learned about differentiation, we will learn about another useful rule for limits that is known as "L'Hopital's rule".
 
 ```
@@ -572,7 +602,7 @@ gets very close to the first point?
 ```{admonition} Definition
 :class: caution
 
-The **derivative** of the function $f(x)$ at the point $x=x_{0}$, if it exists, is defined to be
+The (first) **derivative** of the function $f(x)$ at the point $x=x_{0}$, if it exists, is defined to be
 
 $$
 f^{\prime}\left(x_{0}\right)
@@ -582,11 +612,17 @@ $$
 
 ```
 
+
+```{image} _static/img/lecture_06/derivative_definition.png
+:width: 60%
+:align: center
+```
+
 This is simply the slope of the straight line that is tangent to the function $f(x)$ at the point $x=x_{0}$.
 
 We will now proceed to use this definition to find the derivative of some simple functions. This is sometimes called "finding the derivative of a function from first principles".
 
-```{admonition} Example: the (first) derivative of a constant function
+```{admonition} Example: the derivative of a constant function
 :class: tip
 
 Consider the function $f: X \longrightarrow \mathbb{R}$ defined by $f(x)=b$, where $b \in \mathbb{R}$ is a constant.
@@ -614,7 +650,7 @@ $$
 
 ```
 
-```{admonition} Example: the (first) derivative of a linear function
+```{admonition} Example: the derivative of a linear function
 :class: tip
 
 Consider the function $f: X \longrightarrow \mathbb{R}$ defined by $f(x)=a x+b$.  Note that
@@ -639,7 +675,7 @@ This means that $\lim _{h \rightarrow 0} \frac{f\left(x_{0}+h\right)-f\left(x_{0
 As such, we can conclude that $f^{\prime}(x)=\frac{d f}{d x}=a$.
 ```
 
-```{admonition} Example: the (first) derivative of a quadratic power function
+```{admonition} Example: the derivative of a quadratic power function
 :class: tip
 
 Consider the function $f: X \longrightarrow \mathbb{R}$ defined by $f(x)=x^{2}$.  Note that
@@ -668,7 +704,7 @@ As such, we can conclude that $f^{\prime}(x)=\frac{d f}{d x}=2 x$
 ```
 
 
-```{admonition} Example: the (first) derivative of a quadratic polynomial function
+```{admonition} Example: the derivative of a quadratic polynomial function
 :class: tip
 
 Consider the function $f: X \longrightarrow \mathbb{R}$ defined by $f(x)=a x^{2}+b x+c$. Note that
@@ -705,7 +741,32 @@ As such, we can conclude that $f^{\prime}(x)=\frac{d f}{d x}=2 a x+b$.
 ```
 
 
-```{admonition} Example: the (first) derivative of a positive integer power function
+````{admonition} Fact (Binomial theorem)
+:class: important
+
+## The binomial theorem
+
+Suppose that $x, y \in \mathbb{R}$ and $n \in \mathbb{Z}_+ = \mathbb{N} \cup \{0\}$.
+
+We have
+
+$$
+(x + y)^n = \sum_{k = 0}^{n} \binom{n}{k} x^{(n−k)} y^k
+$$
+
+where $\binom{n}{k} = C_{n,k} = \frac{n!}{k! (n − k)!}$ is known as a binomial coefficient (read "$n$ choose $k$" because this is the number of ways to choose a subset of $k$ elements from a set of $n$ elements).
+$n! = \prod_{k=1}^n k$ denotes a factorial of $n$, and $0! = 1$ by definition.
+
+Useful property is $\binom{n}{k} = C_{n,k} = C_{n-1,k-1}+C_{n-1,k}$ is illustrated by Pascal's triangle.
+
+```{figure} _static/img/lecture_06/pascal_triangle.png
+:width: 30%
+:align: center
+```
+
+````
+
+```{admonition} Example: the derivative of a positive integer power function
 :class: tip
 
 Consider the function $f: \mathbb{R} \longrightarrow \mathbb{R}$ defined by $f(x)=x^{n}$, where $n \in \mathbb{N}=\mathbb{Z}_{++}$. We know from the binomial theorem that
@@ -739,11 +800,8 @@ Thus we have
 
 $$
 \begin{aligned}
-\frac{f(x+h)-f(x)}{h} & =f(x)+\sum_{r=1}^{n}\left(\begin{array}{l}
-n \\
-r
-\end{array}\right) x^{n-r} h^{r} \\
-& =\frac{f(x)+\sum_{r=1}^{n}\left(\begin{array}{l}
+\frac{f(x+h)-f(x)}{h} & 
+=\frac{f(x)+\sum_{r=1}^{n}\left(\begin{array}{l}
 n \\
 r
 \end{array}\right) x^{n-r} h^{r}-f(x)}{h} \\
@@ -770,16 +828,10 @@ r
 $$
 
 $$
-\begin{aligned}
 \frac{f(x+h)-f(x)}{h} & =n x^{n-1}+\sum_{r=2}^{n}\left(\begin{array}{l}
 n \\
 r
-\end{array}\right) x^{n-r} h^{r-1} \\
-& =n x^{n-1}+\sum_{r=2}^{n}\left(\begin{array}{l}
-n \\
-r
 \end{array}\right) x^{n-r} h^{r-1}
-\end{aligned}
 $$
 
 This means that
@@ -799,8 +851,48 @@ $$
 
 ```
 
+```{admonition} Example: derivative of an $e^x$
+:class: tip
 
-### The (first) derivatives of some commonly encountered functions
+Consider the function $f: \mathbb{R} \longrightarrow \mathbb{R}_{++}$ defined by $f(x)=e^x$, where $e$ in Euler's constant.
+Recall that by definition $e = \lim_{n \to \infty} (1+\frac{1}{n})^n$
+
+$$
+\lim_{h \to 0} \frac{f(x+h)-f(x)}{h} 
+=\lim_{h \to 0} \frac{e^{x+h}-e^x}{h}
+=\lim_{h \to 0} \frac{e^x(e^h-1)}{h}
+$$
+
+Consider $\lim_{h \to 0}\frac{e^h-1}{h}$ after substitution $t=(e^h-1)^{-1}$ $\Leftrightarrow$ $h = \ln(t^{-1}+1)$
+
+$$
+\begin{array}{l}
+\lim_{h \to 0}\frac{e^h-1}{h} = 
+\lim_{t \to \infty}\frac{t^{-1}}{\ln(t^{-1}+1)} =\\=
+\lim_{t \to \infty}\left(n \ln(t^{-1}+1) \right)^{-1} =\\=
+\Big( \ln \Big[
+\lim_{t \to \infty} (1+\frac{1}{t})^t
+\Big] \Big)^{-1} =\\=
+( \ln e )^{-1}=
+(1)^{-1} = 1
+\end{array}
+$$
+
+Therefore
+
+$$
+\lim_{h \to 0} \frac{f(x+h)-f(x)}{h} 
+=\lim_{h \to 0} \frac{e^x(e^h-1)}{h}
+= e^x \lim_{h \to 0} \frac{e^h-1}{h}
+= e^x
+$$
+
+
+```
+
+
+```{admonition} Fact: The derivatives of some commonly encountered functions
+:class: important
 
 - If $f(x)=a$, where $a \in \mathbb{R}$ is a constant, then $f^{\prime}(x)=0$.
 - If $f(x)=a x+b$, then $f^{\prime}(x)=a$.
@@ -810,21 +902,83 @@ $$
 - If $f(x)=e^{x}=\exp (x)$, then $f^{\prime}(x)=e^{x}=\exp (x)$.
 - If $f(x)=\ln (x)$, then $f^{\prime}(x)=\frac{1}{x}$. (Recall that $\ln (x)$ is only defined for $x>0$, so we need to assume that $x>0$ here.)
 
+```
+
 
 ### Some useful differentiation rules
 
-- Scalar Multiplication Rule: If $f(x)=c g(x)$ where $c \in \mathbb{R}$ is a constant, then $f^{\prime}(x)=c g^{\prime}(x)$.
-- Summation Rule: If $f(x)=g(x)+h(x)$, then $f^{\prime}(x)=g^{\prime}(x)+h^{\prime}(x)$.
-- Product Rule: If $f(x)=g(x) h(x)$, then $f^{\prime}(x)=g^{\prime}(x) h(x)+h^{\prime}(x) g(x)$.
-- Quotient Rule: If $f(x)=\frac{g(x)}{h(x)}$, then $f^{\prime}(x)=\frac{g^{\prime}(x) h(x)-h^{\prime}(x) g(x)}{[h(x)]^{2}}$.
-- Chain Rule: If $f(x)=g(h(x))$, then $f^{\prime}(x)=g^{\prime}(h(x)) h^{\prime}(x)$.
-- The Inverse Function Rule: Suppose that the function $y=f(x)$ has a well defined inverse function $x=f^{-1}(y)$. If appropriate regularity conditions hold, then
+```{admonition} Fact: Scalar Multiplication Rule
+:class: important
+
+If $f(x)=c g(x)$ where $c \in \mathbb{R}$ is a constant, then 
 
 $$
-\frac{d x}{d y}=\frac{1}{\left(\frac{d y}{d x}\right)}
+f^{\prime}(x)=c g^{\prime}(x)
 $$
 
-### The quotient rule is redundant
+```
+
+```{admonition} Example
+:class: tip
+
+Let $f(x) = a g(x)$ where $g(x)=x$. From the derivation of the derivative of the linear functions we know that $g'(x) = 1$ and $f'(x) = a$. We can verify that $f'(x) = a g'(x)$.
+```
+
+
+
+```{admonition} Fact: Summation Rule
+:class: important
+
+If $f(x)=g(x)+h(x)$, then 
+
+$$
+f^{\prime}(x)=g^{\prime}(x)+h^{\prime}(x)
+$$
+
+```
+
+```{admonition} Example
+:class: tip
+
+Let $f(x) = a x + b$ and $g(x)=cx+d$. From the derivation of the derivative of the linear functions we know that $f'(x) = a$ and $g'(x) = c$. The sum $f(x)+g(x) = (a+c)x+b+d$ is also a linear function, therefore $\frac{d}{dx}\big(f(x)+g(x)\big) = a+c$.
+
+We can thus verify that $\frac{d}{dx}\big(f(x)+g(x)\big) = f'(x)+ g'(x)$.
+
+```
+
+```{admonition} Fact: Product Rule
+:class: important
+
+If $f(x)=g(x) h(x)$, then 
+
+$$
+f^{\prime}(x)=g^{\prime}(x) h(x)+h^{\prime}(x) g(x)
+$$
+
+```
+
+```{admonition} Example
+:class: tip
+
+Let $f(x) = x$ and $g(x)=x$. From the derivation of the derivative of the linear functions we know that $f'(x) = g'(x) = 1$. The product $f(x)g(x) = x^2$ and from the derivation of above we know that $\frac{d}{dx}\big(f(x)g(x)\big) = \frac{d}{dx}\big(x^2\big) = 2x$.
+
+Using the product formula we can verify 
+$\frac{d}{dx}\big(f(x)g(x)\big) = 1\cdot x + x \cdot 1 = 2x$.
+```
+
+
+```{admonition} Fact: Quotient Rule
+:class: important
+
+If $f(x)=\frac{g(x)}{h(x)}$, then 
+
+$$
+f^{\prime}(x)=\frac{g^{\prime}(x) h(x)-h^{\prime}(x) g(x)}{[h(x)]^{2}}
+$$
+
+```
+
+#### The quotient rule is redundant
 
 In a sense, the quotient rule is redundant. The reason for this is that it can be obtained from a combination of the product rule and the chain rule.
 
@@ -841,8 +995,9 @@ k^{\prime}(x)=(-1)[h(x)]^{-2} h^{\prime}(x)=\frac{-h^{\prime}(x)}{[h(x)]^{2}}
 $$
 
 Note that
+
 $$
-f(x)=\frac{g(x)}{h(x)}=g(x)[h(x)]^{-1}=g(x) k(x) .
+f(x)=\frac{g(x)}{h(x)}=g(x)[h(x)]^{-1}=g(x) k(x)
 $$
 
 We know from the product rule that
@@ -859,75 +1014,65 @@ $$
 
 This is simply the quotient rule!
 
-```{admonition} Example: the (first) derivative of an exponential function
-:class: tip
+```{admonition} Fact: Chain Rule
+:class: important
 
-Suppose that $f(x)=a^{x}$, where $a \in \mathbb{R}_{++}=(0, \infty)$ and $x \neq 0$. Note that
-
-$$
-\ln (f(x))=\ln \left(a^{x}\right)=x \ln (a) .
-$$
-
-We know from the chain rule that
+If $f(x)=g(h(x))$, then 
 
 $$
-\frac{d f(x)}{d x}=\left(\frac{d f(x)}{d \ln (f(x))}\right)\left(\frac{d \ln (f(x))}{d x}\right)
-$$
-
-We know from the inverse function rule that
-
-$$
-\frac{d f(x)}{d \ln (f(x))}=\frac{1}{\left(\frac{d \ln (f(x))}{d f(x)}\right)}=\frac{1}{\left(\frac{1}{a^{x}}\right)}=a^{x}
-$$
-
-We know from the scalar multiplication rule that
-
-$$
-\begin{aligned}
-\frac{d \ln (f(x))}{d x} & =\frac{d x \ln (a)}{d x} \\
-& =\ln (a)\left(\frac{d x}{d x}\right) \\
-& =\ln (a)(1) \\
-& =\ln (a) .
-\end{aligned}
-$$
-
-Thus we have
-
-$$
-\frac{d a^{x}}{d x}=a^{x} \ln (a)
+f^{\prime}(x)=g^{\prime}(h(x)) h^{\prime}(x)
 $$
 
 ```
 
-```{admonition} Example: the (first) derivative of a logarithmic function
+```{admonition} Example: the derivative of an exponential function
 :class: tip
 
-Suppose that $f(x)=\log _{a}(x)$, where $a \in \mathbb{R}_{++}=(0, \infty)$ and $x>0$.  Note that
+Suppose that $f(x)=a^{x}$, where $a \in \mathbb{R}_{++}=(0, \infty)$ and $x \neq 0$. 
+
+We can write $f(x) = e^{\ln a^{x}} = e^ {x \ln(a)}$, and using the chain rule
 
 $$
-a^{f(x)}=a^{\log _{a}(x)}=x .
+f'(x) = \frac{d}{dx} e^ {x \ln(a)} = 
+e^ {x \ln(a)}  \frac{d}{dx} (x \ln(a)) =
+a^x \ln(a)
 $$
 
-We know from the chain rule that
+```
+
+```{admonition} Fact: The Inverse Function Rule
+:class: important
+
+Suppose that the function $y=f(x)$ has a well defined inverse function $x=f^{-1}(y)$. If appropriate regularity conditions hold, then
 
 $$
-\frac{d f(x)}{d x}=\left(\frac{d f(x)}{d a^{f(x)}}\right)\left(\frac{d a^{f(x)}}{d x}\right)
+\frac{dx}{d y} = \frac{d}{d y} f^{-1}(y) =\frac{1}{f'\big( f^{-1}(y)\big)}
 $$
 
-We know from the inverse function rule that
+```
+
+
+```{admonition} Example: the derivative of a logarithmic function
+:class: tip
+
+Suppose that $f(x)=\log _{a}(x)$, where $a \in \mathbb{R}_{++}=(0, \infty)$ and $x>0$.
+
+Recall that $y = \log _{a}(x) \iff a^y = x$. Then evaluating $\frac{dx}{dy}$ using the derivative of the exponential function we have
 
 $$
-\frac{d f(x)}{d a^{f(x)}}=\frac{1}{\left(\frac{d a^{f(x)}}{d f(x)}\right)}=\frac{1}{\left(a^{f(x)} \ln (a)\right)}=\frac{1}{x \ln (a)}
+\frac{dx}{dy} = a^y \ln(a)
 $$
 
-Thus we have
+On the other hand, using the inverse function rule we have
 
 $$
-\begin{aligned}
-\frac{d a^{x}}{d x} & =\left(\frac{1}{x \ln (a)}\right)\left(\frac{d x}{d x}\right) \\
-& =\left(\frac{1}{x \ln (a)}\right)(1) \\
-& =\frac{1}{x \ln (a)} .
-\end{aligned}
+\frac{dx}{dy} = \frac{1}{f'(a^y)}
+$$
+
+Combining the two expressions and reinserting $a^y = x$, we have
+
+$$
+f'(x) = \frac{d \log_a(x)}{d x} = \frac{1}{a^y \ln(a)} = \frac{1}{x \ln(a)}
 $$
 
 ```
@@ -975,7 +1120,7 @@ $$
 
 
 
-## The relationship between continuity and differentiability
+## Differentiability and continuity
 
 - Continuity is a necessary, but not sufficient, condition for differentiability.
     - Being a necessary condition means that "not continuous" implies "not differentiable", which means that differentiable implies continuous.
@@ -1015,31 +1160,32 @@ f(1)=2
 $$
 
 
-However, this function is not differentiable at $x=1$ because
+However, this function is not differentiable at $x=1$.
+To show this it is convenient to use the Heine definition of the limit for a function in application to the derivative.
+
+Consider two sequence converging to $x=1$ from two different directions:
 
 $$
-\lim _{h \uparrow 1} \frac{f(1+h)-f(1)}{h}=2
+\{p_n\}_{n \in \mathbb{N}}: p_n < 0, p_n \to 0,  \quad
+\{q_n\}_{n \in \mathbb{N}}: q_n > 0, q_n \to 0
 $$
 
-and
+Then at $x=1$
 
 $$
-\lim _{h \downarrow 1} \frac{f(1+h)-f(1)}{h}=\frac{1}{2}
+\lim_{n \to \infty} \frac{f(1+p_n)-f(1)}{p_n} =
+\lim_{n \to \infty} \frac{2+2p_n-2}{p_n} = 2
 $$
 
-Since
+but 
 
 $$
-\lim _{h \uparrow 1} \frac{f(1+h)-f(1)}{h} \neq \lim _{h \downarrow 1} \frac{f(1+h)-f(1)}{h}
+\lim_{n \to \infty} \frac{f(1+q_n)-f(1)}{q_n} =
+\lim_{n \to \infty} \frac{\frac{1}{2} +\frac{1}{2}q_n+\frac{3}{2} - \frac{1}{2} - \frac{3}{2}}{q_n} = \frac{1}{2}
 $$
 
-we know that
-
-$$
-\lim _{h \rightarrow 1} \frac{f(1+h)-f(1)}{h}
-$$
-
-does not exist.
+Thus, for two different convergent sequences $p_n$ and $q_n$ we have two different limits of the derivative at $x=1$.
+We conclude that the limit $\lim _{h \rightarrow 1} \frac{f(1+h)-f(1)}{h}$ is undefined.
 
 $\blacksquare$
 ````
@@ -1147,7 +1293,11 @@ $$
 
 
 The same approach can be used for defining third and higher order derivative.
-Thus we have
+
+```{admonition} Definition
+:class: caution
+
+The $n$-th order derivative of a function $f \colon \mathbb{R} \to \mathbb{R}$, if it exists, is the derivative of it's $(n-1)$-th order derivative treated as an independent function.
 
 $$
 f^{(k)}(x)=\frac{d^{k} f}{d x^{k}}=\frac{d}{d x}\left(\frac{d^{k-1} f}{d x^{k-1}}\right)
@@ -1159,6 +1309,7 @@ $$
 f^{(0)}(x)=f(x)
 $$
 
+```
 
 
 ```{admonition} Example
@@ -1181,96 +1332,164 @@ $$
 ```
 
 
-## Using first and second derivatives to investigate the shape of a function
+## Taylor series
 
-- The first and second order derivatives of a function provide useful information about the shape of that function.
-- The first derivative tells us about the slope of a function. Is it increasing, decreasing, or constant over some interval? At what point or points, if any, does the sign of the slope of the function change? (Such points are known as turning points.)
-- The second derivative tells us about the curvature of the function. Is it convex or concave over some interval? At what point or points, if any, does the curvature of the function change? (Such points are known as inflexion points.)
+```{admonition} Fact
+:class: important
 
+Consider $f: X \to \mathbb{R}$ and let $f$ to be a $C^m$ function. Assume also that $f^{(m+1)}$ exists, although may not necessarily be continuous.
 
-### Increasing functions
+For any $x,a \in X$ there is such $z$ between $a$ and $x$ that
+:::{math}
+\begin{array}{rl}
+f(x) =& f(a) + f'(a)(x-a) + \dots + \frac{f^{(m)}(a)}{m!}(x-a)^m + R_m(x) =\\
+=& f(a) + \sum_{k=1}^m \frac{f^{(k)}(a)}{k!}(x-a)^k + R_m(x),
+\end{array}
+:::
+where the remainder is given by
+:::{math}
+R_m(x) = \frac{f^{(m+1)}(z)(x-a)^{m+1}}{(m+1)!} = o\big((x-a)^m\big)
+:::
+```
 
-- A function is said to be **increasing** on the non-empty interval $(a, b) \subseteq \mathbb{R}$ if $f\left(x_{0}\right) \leqslant f\left(x_{1}\right)$ whenever $x_{0}<x_{1}$, where $x_{0} \in(a, b)$ and $x_{1} \in(a, b)$.
-    - If $f^{\prime}(x) \geqslant 0$ for all $x \in(a, b)$, then the function $f(x)$ is increasing on the interval $(a, b)$.
-- A function is said to be **strictly increasing** on the non-empty interval $(a, b) \subseteq \mathbb{R}$ if $f\left(x_{0}\right)<f\left(x_{1}\right)$ whenever $x_{0}<x_{1}$, where $x_{0} \in(a, b)$ and $x_{1} \in(a, b)$.
-    - If $f^{\prime}(x)>0$ for all $x \in(a, b)$, then the function $f(x)$ is strictly increasing on the interval $(a, b)$.
+```{admonition} Definition
+:class: caution
 
-
-### Decreasing functions
-
-- A function is said to be **decreasing** on the non-empty interval $(a, b) \subseteq \mathbb{R}$ if $f\left(x_{0}\right) \geqslant f\left(x_{1}\right)$ whenever $x_{0}<x_{1}$, where $x_{0} \in(a, b)$ and $x_{1} \in(a, b)$.
-    - If $f^{\prime}(x) \leqslant 0$ for all $x \in(a, b)$, then the function $f(x)$ is decreasing on the interval $(a, b)$.
-- A function is said to be **strictly decreasing** on the non-empty interval $(a, b) \subseteq \mathbb{R}$ if $f\left(x_{0}\right)>f\left(x_{1}\right)$ whenever $x_{0}<x_{1}$, where $x_{0} \in(a, b)$ and $x_{1} \in(a, b)$.
-    - If $f^{\prime}(x)<0$ for all $x \in(a, b)$, then the function $f(x)$ is strictly decreasing on the interval $(a, b)$.
-
-
-### Convex functions
-
-- A function is said to be **convex** on the non-empty interval $(a, b) \subseteq \mathbb{R}$ if $f\left(\lambda x_{0}+(1-\lambda) x_{1}\right) \leqslant \lambda f\left(x_{0}\right)+(1-\lambda) f\left(x_{1}\right)$ whenever $x_{0} \in(a, b), x_{1} \in(a, b)$ and $x_{0} \neq x_{1}$.
-    - In other words, a function is convex on an interval if the graph of the straight line joining any two distinct points in that interval lies on or above the graph of the function between those two points.
-    - If $f^{\prime \prime}(x) \geqslant 0$ for all $x \in(a, b)$, then the function $f(x)$ is convex on the interval $(a, b)$.
-- A function is said to be **strictly convex** on the non-empty interval $(a, b) \subseteq \mathbb{R}$ if $f\left(\lambda x_{0}+(1-\lambda) x_{1}\right)<\lambda f\left(x_{0}\right)+(1-\lambda) f\left(x_{1}\right)$ whenever $x_{0} \in(a, b), x_{1} \in(a, b)$ and $x_{0} \neq x_{1}$.
-    - In other words, a function is strictly convex on an interval if the graph of the straight line joining any two distinct points in that interval lies strictly above the graph of the function between those two points.
-    - If $f^{\prime \prime}(x)>0$ for all $x \in(a, b)$, then the function $f(x)$ is strictly convex on the interval $(a, b)$.
+Little-o notation is used to describe functions that approach zero faster than a given function
+:::{math}
+f(x) = o\big(g(x)\big) \; \text{as} \; x \to a \quad \iff \quad \lim_{x \to a} \frac{f(x)}{g(x)} = 0
+:::
+```
 
 
-### Concave functions
 
-- A function is said to be **concave** on the non-empty interval $(a, b) \subseteq \mathbb{R}$ if $f\left(\lambda x_{0}+(1-\lambda) x_{1}\right) \geqslant \lambda f\left(x_{0}\right)+(1-\lambda) f\left(x_{1}\right)$ whenever $x_{0} \in(a, b), x_{1} \in(a, b)$ and $x_{0} \neq x_{1}$.
-    - In other words, a function is concave on an interval if the graph of the straight line joining any two distinct points in that interval lies on or below the graph of the function between those two points.
-    - If $f^{\prime \prime}(x) \leqslant 0$ for all $x \in(a, b)$, then the function $f(x)$ is convex on the interval $(a, b)$.
-- A function is said to be **strictly concave** on the non-empty interval $(a, b) \subseteq \mathbb{R}$ if $f\left(\lambda x_{0}+(1-\lambda) x_{1}\right)>\lambda f\left(x_{0}\right)+(1-\lambda) f\left(x_{1}\right)$ whenever $x_{0} \in(a, b), x_{1} \in(a, b)$ and $x_{0} \neq x_{1}$.
-    - In other words, a function is strictly concave on an interval if the graph of the straight line joining any two distinct points in that interval lies strictly below the graph of the function between those two points.
-    - If $f^{\prime \prime}(x)<0$ for all $x \in(a, b)$, then the function $f(x)$ is strictly convex on the interval $(a, b)$.
+Loosely speaking, if $f \colon \mathbb{R} \to \mathbb{R}$ is suitably
+differentiable at $a$, then
+%
+$$
+f(x) \approx f(a) + f'(a)(x-a) 
+$$
+%
+for $x$ very close to $a$,
+%
+$$
+f(x) \approx f(a) + f'(a)(x-a) + \frac{f''(a)}{2!}(x-a)^2 
+$$
+%
+on a slightly wider interval, etc.
+
+These are the 1st and 2nd order **Taylor series approximations**
+to $f$ at $a$ respectively
+
+As the order goes higher we get better approximation
+
+```{figure} _static/img/lecture_06/taylor_4.png
+:width: 60%
+
+4th order Taylor series for $f(x) = \sin(x)/x$ at 0
+```
+
+```{figure} _static/img/lecture_06/taylor_6.png
+:width: 60%
+
+6th order Taylor series for $f(x) = \sin(x)/x$ at 0
+```
+
+```{figure} _static/img/lecture_06/taylor_8.png
+:width: 60%
+
+8th order Taylor series for $f(x) = \sin(x)/x$ at 0
+```
+
+```{figure} _static/img/lecture_06/taylor_10.png
+:width: 60%
+
+10th order Taylor series for $f(x) = \sin(x)/x$ at 0
+```
 
 
-### Peak (local maximum) turning points
+## L'Hopital's rule
 
-- The point $c$ yields a **local maximum** of the function $f(x)$ if there exists some non-empty interval $(a, b)$ that is a subset of the domain of the function such that $c \in(a, b)$ and $f(x) \leqslant f(c)$ for all $x \in(a, b)$.
-- If (i) $f^{\prime}(c)=0$, (ii) $f^{\prime}(x) \geqslant 0$ for all $x \in(a, c)$ where $a<c$, and (iii) $f^{\prime}(x) \leqslant 0$ for all $x \in(c, b)$ where $c<b$, then the point $x=c$ yields a local maximum of the function $f$ over the non-empty interval $(a, b)$.
-- If (i) $f^{\prime}(c)=0$ and (ii) $f^{\prime \prime}(c)<0$, then the point $x=c$ yields a strict local maximum of the function $f$ over some non-empty interval $(a, b)$ such that $c \in(a, b)$.
-    - Note that we need $f^{\prime \prime}(c)<0$ here. If $f^{\prime \prime}(c)=0$, then this theorem does not apply. In such a case, a different approach must be used to determine whether or not the point $x=c$ yields a local maximum of the function.
+Consider the function $f(x)=\frac{g(x)}{h(x)}$. 
+
+```{admonition} Definition
+:class: caution
+
+If $\lim _{x \rightarrow x_{0}} g(x)=\lim _{x \rightarrow x_{0}} h(x)=0$, we call this situation an "$\frac{0}{0}$" *indeterminate form*
+
+If $\lim _{x \rightarrow x_{0}} g(x)= \pm \infty$, $\lim _{x \rightarrow x_{0}} h(x)= \pm \infty$, we call this situation an "$\frac{ \pm \infty}{ \pm \infty}$" *indeterminate form*
+
+```
+
+```{admonition} Fact: L'Hopital's rule for limits of indeterminate form
+:class: important
+
+Suppose that $g(x)$ and $h(x)$ are both differentiable at all points on a non-empty interval $(a, b)$ that contains the point $x=x_{0}$, with the possible exception that they might not be differentiable at the point $x_{0}$.
+
+Suppose also that $h^{\prime}(x) \neq 0$ for all $x \in(a, b)$.  
+
+Further, assume that for $f(x)=\frac{g(x)}{h(x)}$ we have either "$\frac{0}{0}$" or "$\frac{ \pm \infty}{ \pm \infty}$" indeterminate form.
+
+Then if $\lim _{x \rightarrow x_{0}}\frac{g^{\prime}(x)}{h^{\prime}(x)}$ exists, then
+
+$$
+\lim _{x \rightarrow x_{0}} f(x) = 
+\lim _{x \rightarrow x_{0}}\frac{g(x)}{h(x)} =
+\lim _{x \rightarrow x_{0}}\frac{g^{\prime}(x)}{h^{\prime}(x)}
+$$
+
+```
+
+- all four conditions have to hold for the L'Hopital's rule to hold!
 
 
-### Trough (local minimum) turning points
+```{admonition} Example
+:class: tip
 
-- The point $c$ yields a **local minimum** of the function $f(x)$ if there exists some non-empty interval $(a, b)$ that is a subset of the domain of the function such that $c \in(a, b)$ and $f(x) \geqslant f(c)$ for all $x \in(a, b)$.
-- If (i) $f^{\prime}(c)=0$, (ii) $f^{\prime}(x) \leqslant 0$ for all $x \in(a, c)$ where $a<c$, and (iii) $f^{\prime}(x) \geqslant 0$ for all $x \in(c, b)$ where $c<b$, then the point $x=c$ yields a local minimum of the function $f$ over the non-empty interval $(a, b)$.
-- If (i) $f^{\prime}(c)=0$ and (ii) $f^{\prime \prime}(c)>0$, then the point $x=c$ yields a strict local minimum of the function $f$ over some non-empty interval $(a, b)$ such that $c \in(a, b)$.
-    - Note that we need $f^{\prime \prime}(c)>0$ here. If $f^{\prime \prime}(c)=0$, then this theorem does not apply. In such a case, a different approach must be used to determine whether or not the point $x=c$ yields a local minimum of the function.
+Note that in the examples below we have "$\frac{0}{0}$" indeterminacy, and both enumerator and denominator functions are differentiable around $x=0$
+
+$$
+\lim_{x \to 0} \frac{\ln(x+1)}{x} = \lim_{x \to 0} \frac{\frac{1}{x+1}}{1} = \lim_{x \to 0} \frac{1}{x+1} = 1
+$$
+
+$$
+\lim_{x \to 0} \frac{e^x-1}{x} = \lim_{x \to 0} \frac{e^x}{1} = e^0 = 1
+$$
+
+```
+
+```{admonition} Example
+:class: tip
+
+L'Hopital's rule is not applicable for $\lim_{x \to 0} \frac{x}{\ln(x)}$ because neither "$\frac{0}{0}$" nor "$\frac{ \pm \infty}{ \pm \infty}$" indeterminacy form applies.
+
+```
 
 
-### Inflection points
-
-- An **inflection point** of a function is a point at which the curvature of the function changes from either convex to concave or concave to convex.
-- The point $x=c$ is an inflection point of the twice differentiable function $f(x)$ if there exists some interval $(a, b)$ that is a subset of the domain of $f(x)$ such that $c \in(a, b)$ and either (a) both (i) $f^{\prime \prime}(x) \geqslant 0$ for all $x \in(a, c)$ and (ii) $f^{\prime \prime}(x) \leqslant 0$ for all $x \in(c, b)$, or (b) both (i) $f^{\prime \prime}(x) \leqslant 0$ for all $x \in(a, c)$ and (ii) $f^{\prime \prime}(x) \geqslant 0$ for all $x \in(c, b)$.
-
-
-- Suppose that the function $f(x)$ is twice continuously differentiable on the interval $(a, b)$, where that interval is a subset of the domain of the function. If $c \in(a, b)$ is an inflection point of the function $f(x)$, then $f^{\prime \prime}(c)=0$.
-- Suppose that the function $f(x)$ is twice continuously differentiable on the interval $(a, b)$, where that interval is a subset of the domain of the function and $c \in(a, b)$. If both (i) $f^{\prime \prime}(c)=0$ and (ii) $f^{\prime \prime}(c)$ changes sign at the point $x=c$, then the point $x=c$ is an inflection point of the function $f(x)$.
 
 
 ## Some economic applications of derivatives
 
-- Obtaining marginal revenue from total revenue and marginal cost from total cost.
-- The relationship between the marginal cost curve and the average cost curve. (See separate handout.)
-- Marginal revenue for a single-price monopolist that faces a linear demand curve. (See separate handout.)
-- The calculation of elasticities, with a particular focus on the own-price elasticity of demand, cross-price elasticities of demand, the income elasticity of demand, and the own-price elasticity of supply.
-
 
 ### Marginal revenue and marginal cost
 
-- If a firm's total revenue as a function of output is given by the function $R(Q)$, then its marginal revenue is given by the first derivative of that function:
+If a firm's total revenue as a function of output is given by the function $R(Q)$, then its marginal revenue is given by the first derivative of that function:
 
 $$
 MR(Q)=\frac{d R(Q)}{d Q}=R^{\prime}(Q)
 $$
 
-- If a firm's total cost as a function of output is given by the function $C(Q)$, then its marginal cost is given by the first derivative of that function:
+If a firm's total cost as a function of output is given by the function $C(Q)$, then its marginal cost is given by the first derivative of that function:
 
 $$
 MC(Q)=\frac{d C(Q)}{d Q}=C^{\prime}(Q)
 $$
+
+
+Interpretation of marginal values: change (in $R$ of $C$) caused by a small (*infinitesimal*) change in the variable $Q$.  
+
+Often interpreted as a changed caused by the *unit change* in the variable, using linear Taylor approximation.
+
 
 ### Marginal revenue for a monopolist
 
@@ -1290,23 +1509,86 @@ Since $P(Q)$ will be the market price when the monopolist produces $Q>0$ units o
 
 
 The two terms that make up marginal revenue for a monopolist can be given a very intuitive explanation. If the monopolist increases its output by a small amount, it receives the market price for the additional output (hence the $P(Q)$ term), but it loses some revenue due to the lower price that it will receive for all of the pre-existing output (the $P^{\prime}(Q) Q$ term).
-- The additional output is known as the "marginal" unit of output.
-- The pre-existing units of output are known as the "infra-marginal" units of output.
-
-*Illustrate the relationship between the inverse market demand curve for a monopolist's product and the marginal revenue curve for the monopolist on the white-board.*
-
 
 
 ### Point elasticities
 
+```{admonition} Definition
+:class: caution
 
-FROM LINEAR DEMAND
+Suppose that $y=f(x)$. The **elasticity of $y$ with respect to $x$** is defined to be the percentage change in $y$ that is induced by a small (*infinitesimal*) percentage change in $x$.
 
-The “point” own-price elasticity of demand is given by the formula
+```
+
+So, what is a percentage change in $x$?
+
+- $x$ to $x+h$, making $h$ the *absolute* change in $x$
+- $x$ to $x + rx$, making $(x+rx)/x = 1+r$ the *relative* change in $x$, and $r$ is the relative change rate
+- percentage change in $x$ is the relative change rate expressed in percentage points
+
+We are interested in infinitesimal percentage change, therefore in the limit as $r \to 0$ (irrespective of the units of $r$)
+
+What is the percentage change in $y$?
+
+Answer: rate of change of $f(x)$ that can be expressed as
 
 $$
-\epsilon^D_P (P) = \left( \frac{P}{Q^D (P)} \right) (\text{slope}(Q^D (P)))
+\frac{f(x+rx)}{f(x)} -1 = \frac{f\big(x(1+r)\big)-f(x)}{f(x)}
 $$
+
+Let's consider the limit
+
+$$
+\lim_{r \to 0} \frac{\frac{f\big(x(1+r)\big)-f(x)}{f(x)}}{r} = 
+\frac{1}{f(x)} \lim_{r \to 0} \frac{f\big(x(1+r)\big)-f(x)}{r} =
+$$
+
+Define a new function $g$ such that $f(x) = g\big(\ln(x)\big)$ and $f\big(x(1+r)\big) = g\big(\ln(x) + \ln(1+r)\big)$
+
+Continuing the above, and noting that $\ln(1+r) \to 0$ as $r \to 0$ we have
+
+$$
+= \frac{1}{f(x)} \lim_{r \to 0} \frac{g\big(\ln(x) + \ln(1+r)\big)-g\big(\ln(x)\big)}{r} = \\ =
+\frac{1}{f(x)} \lim_{r \to 0} \frac{g\big(\ln(x) + \ln(1+r)\big)-g\big(\ln(x)\big)}{\ln(1+r)} \frac{\ln(1+r)}{r} = \\ =
+\frac{1}{f(x)} \left[ \lim_{r \to 0} \frac{g\big(\ln(x) + \ln(1+r)\big)-g\big(\ln(x)\big)}{\ln(1+r)} \lim_{r \to 0} \frac{\ln(1+r)}{r} \right] =\\=
+\frac{1}{f(x)} \frac{d g(\ln(x))}{d \ln(x)} = 
+\frac{1}{f(x)} \frac{d f(x)}{d \ln(x)} = \frac{x}{f(x)} \frac{d f(x)}{d x}
+$$
+
+See the example above showing that $\lim_{r \to 0} \frac{\ln(1+r)}{r} = 1$.
+
+In the last step, to make sense of the expression $\frac{d f(x)}{d \ln(x)}$, imagine that $x$ is a function of some other variable we call $\ln(x)$.
+Then we can use the chain rule and the inverse function rule to show that
+
+$$
+\frac{d f(x)}{d \ln(x)} = \frac{d f(x)}{d x} \frac{dx}{d \ln(x)} = \frac{d f(x)}{d x} \frac{1}{\frac{1}{x}} = x 
+$$
+
+Note, in addition, that by the chain rule the following also holds
+
+$$
+\frac{d \ln f(x)}{d \ln(x)} = \frac{1}{f(x)} \frac{d f(x)}{d \ln(x)}
+$$
+
+```{admonition} Definition
+:class: caution
+
+The (point) **elasticity of $f(x)$ with respect to $x$** is defined to be the percentage change in $y$ that is induced by a small (*infinitesimal*) percentage change in $x$, and is given by
+
+$$
+\epsilon^{f}_{x}(x)=
+\lim_{r \to 0} \frac{\frac{f\big(x(1+r)\big)}{f(x)}-1}{r} = 
+\frac{\frac{d f(x)}{d x}}{\frac{f(x)}{x}} = 
+\frac{x}{f(x)} \frac{d f(x)}{d x} = 
+\frac{d \ln f(x)}{d \ln x}
+$$
+
+```
+
+
+```{admonition} Example
+:class: tip
+
 Suppose that we have a linear demand curve of the form
 
 $$
@@ -1358,72 +1640,27 @@ $$
 \end{cases}
 $$
 
-Illustrate this on the whiteboard
 
-
----
-
-
-
-Suppose that $y=f(x)$. The **elasticity of $y$ with respect to $x$** is defined to be the percentage change in $y$ that is induced by a small percentage change in $x$.
-
-In calculus terms, this is given by the function
-
-$$
-\epsilon_{x}^{y}(x)=\left(\frac{x}{y}\right)\left(\frac{d y}{d x}\right)=\frac{x f^{\prime}(x)}{f(x)}
-$$
-
-It can also be calculated using calculus as
-
-$$
-\epsilon_{x}^{y}(x)=\frac{d \ln (y)}{d \ln (x)}
-$$
-
-We can use the chain rule and the inverse function rule to show that these two formulae for the elasticity of $y$ with respect to $x$ are equivalent. Note that
-
-$$
-\begin{aligned}
-\frac{d \ln (y)}{d \ln (x)} & =\left(\frac{d \ln (y)}{d y}\right)\left(\frac{d y}{d x}\right)\left(\frac{d x}{d \ln (x)}\right) \\
-& =\left(\frac{1}{y}\right)\left(\frac{d y}{d x}\right)\left(\frac{1}{\left(\frac{d \ln (x)}{d x}\right)}\right) \\
-& =\left(\frac{1}{y}\right)\left(\frac{d y}{d x}\right)\left(\frac{1}{\left(\frac{1}{x}\right)}\right) \\
-& =\left(\frac{x}{y}\right)\left(\frac{d y}{d x}\right) .
-\end{aligned}
-$$
-
-- Suppose that the demand curve for a commodity is given by $Q=D(P)$. In this case, the own-price elasticity of demand for this commodity is given by
-
-$$
-\epsilon_{P}^{D}(P)=\left(\frac{P}{Q}\right)\left(\frac{d Q}{d P}\right)=\frac{P D^{\prime}(P)}{D(P)}
-$$
-
-- Suppose that the supply curve for a commodity is given by $Q=S(P)$. In this case, the own-price elasticity of supply for this commodity is given by
-
-$$
-\epsilon_{P}^{S}(P)=\left(\frac{P}{Q}\right)\left(\frac{d Q}{d P}\right)=\frac{P S^{\prime}(P)}{S(P)}
-$$
-
-
-## L'Hopital's rule for limits of indeterminate form
-
-Consider the function $f(x)=\frac{g(x)}{h(x)}$. Suppose that $g(x)$ and $h(x)$ are both differentiable at all points on a non-empty interval $(a, b)$ that contains the point $x=x_{0}$, with the possible exception that they might not be differentiable at the point $x_{0}$.
-
-Suppose also that $h^{\prime}(x) \neq 0$ for all $x \in(a, b)$.  
-
-- If $\lim _{x \rightarrow x_{0}} g(x)=\lim _{x \rightarrow x_{0}} h(x)=0$ and $\lim _{x \rightarrow x_{0}}\left(\frac{g^{\prime}(x)}{h^{\prime}(x)}\right)=L$, then according to L'Hopital's rule for " $\left(\frac{0}{0}\right)$ " indeterminate forms, we have
-
-$$
-\lim _{x \rightarrow x_{0}} f(x)=\lim _{x \rightarrow x_{0}}\left(\frac{g(x)}{h(x)}\right)=\lim _{x \rightarrow x_{0}}\left(\frac{g^{\prime}(x)}{h^{\prime}(x)}\right)=L
-$$
-
-- If $\lim _{x \rightarrow x_{0}} g(x)= \pm \infty$, $\lim _{x \rightarrow x_{0}} h(x)= \pm \infty$ and $\lim _{x \rightarrow x_{0}}\left(\frac{g^{\prime}(x)}{h^{\prime}(x)}\right)=L$, then according to L'Hopital's rule for " $\left(\frac{ \pm \infty}{ \pm \infty}\right)$ " indeterminate forms, we have
-
-$$
-\lim _{x \rightarrow x_{0}} f(x)=\lim _{x \rightarrow x_{0}}\left(\frac{g(x)}{h(x)}\right)=\lim _{x \rightarrow x_{0}}\left(\frac{g^{\prime}(x)}{h^{\prime}(x)}\right)=L
-$$
+```
 
 ```{admonition} Example
 :class: tip
 
-Examples of indeterminate forms of limits
+Suppose that we have a demand curve of the form
+
+$$
+Q = a/P
+$$
+where $a > 0$.
+Computing the point elasticity of demand at price $P$ we have 
+
+$$
+\begin{align*}
+\epsilon^D_P (P) &= \left( \frac{P}{a/P} \right) \left( \frac{-a}{P^2} \right) \\
+&=  \frac{P^2}{a}\frac{-a}{P^2}  = -1
+\end{align*}
+$$
+
+Constant own-price elasticity!
 
 ```
