--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -1282,13 +1282,13 @@ $$
 or, if you prefer,
 
 $$
-\frac{d^{2} f}{d x^{2}}=\frac{d g}{d x}
+\frac{d^{2} f}{d x d x}=\frac{d g}{d x}
 $$
 
 Thus we have
 
 $$
-\frac{d^{2} f}{d x^{2}}=\frac{d}{d x}\left(\frac{d f}{d x}\right)
+\frac{d^{2} f}{d x d x}=\frac{d}{d x}\left(\frac{d f}{d x}\right)
 $$
 
 
