Some work on future lectures

--- a/07.linear_algebra.md
+++ b/07.linear_algebra.md
@@ -1269,20 +1269,20 @@ $$
 
 ## Determinant of a matrix
 
-### 2x2 case 
+- 2x2 case 
 
-### 3x3 case
+- 3x3 case
 
-### General case
+- General case
 
-- Minors
-- General formula
+    - Minors
+    - General formula
 
 ### Properties of determinants
 
 - operations and properties
 
 
-Examples of different sizes
+> Examples of different sizes
 
 
