--- a/07.linear_systems.md
+++ b/07.linear_systems.md
@@ -20,45 +20,69 @@ kernelspec:
 :width: 100px
 :align: left
 ```
-{cite:ps}`sydsaeter2006`
-
-???
-
-<div style="clear: both"></div>
-
-- {cite:ps}`anton1987`: Chapters 1-3 (pp. 1-142).
-- {cite:ps}`asano2013`: Appendix A (pp. 218-242).
-- {cite:ps}`basilevsky1983`: Chapters 1-4 (pp. 1-187).
-- {cite:ps}`bradley2008`: Chapter 9 (pp. 475-536).
-- {cite:ps}`chiang2005`: Chapters 4 and 5.
-- {cite:ps}`haeussler1987`: Chapter 8 (pp. 238-309).
-- {cite:ps}`shannon1995`: Chapters 4 and 5 (pp. 121-230).
-- {cite:ps}`simon1994`: Chapters 6-11 and 26-28 (pp. 107-250 and 719-799).
+{cite:ps}`sydsaeter2006` TBA
 
 ````
 
 ## What is a system of linear equations
 
-Equations
+- Equations
 
-Matrix notation
+- Matrix notation
 
 
 ## Gaussian elimination
 
-Augmented matrix notation for the system of linear equations (adding the RHS of the system as an extra column)
+- Augmented matrix notation for the system of linear equations (adding the RHS of the system as an extra column)
 
-Algorithm for solving systems of linear equations using a set of elementary raw operations:
-- swap the positions of two rows
-- multiply a row by a nonzero scalar
-- add one raw to another
-
+- Algorithm for solving systems of linear equations using a set of elementary raw operations:
+  - swap the positions of two rows
+  - multiply a row by a nonzero scalar
+  - add one raw to another
 
 ```{admonition} Definition
 :class: caution
 
-Echelon form of a matrix is ***
+A matrix is said to be in *row echelon form* if it satisfies the following conditions:
+
+- all rows having only zero entries are at the bottom of the matrix
+- leading entry (first non-zero entry) of each row is to the right of the leading entry of the row above it
+
 ```
+
+```{admonition} Example
+:class: tip
+
+example
+```
+
+```{admonition} Definition
+:class: caution
+
+A matrix is said to be in *reduced row echelon form* if it satisfies the following conditions:
+- it is in row echelon form
+- the leading entry in each row is 1
+- each column containing a leading 1 has all other entries equal to zero
+
+```
+
+```{admonition} Example
+example
+```
+
+```{admonition} Fact
+:class: important
+
+Every matrix has a unique reduced row echelon form.
+```
+
+```{admonition} Fact
+:class: important
+
+Every matrix can be transformed to echelon and reduced echelon form using Gaussian elimination.
+```
+
+
 
 ## Computing an inverse of a matrix with Gaussian row operations
 
