--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -1663,4 +1663,11 @@ $$
 
 Constant own-price elasticity!
 
+Alternatively we could compute this elasticity as
+
+$$
+Q &= a/P \quad \Leftrightarrow \quad \ln Q = \ln a - \ln P \\
+\epsilon^D_P (P) &= \frac{d \ln Q}{d \ln P} = -1
+$$
+
 ```
