--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -10,6 +10,29 @@ kernelspec:
   name: python3
 ---
 
+````{admonition} Announcements & Reminders
+:class: note
+:class: dropdown
+
+1. Results of Online test 2
+
+```{figure} _static/img/notes/EMET7001quiz2.png
+:width: 80%
+
+Distribution of results for Online test 2
+```
+
+2. Teaching break: next two weeks **April 1st to 14th**
+  
+  - No teaching
+  - No tutorials
+  - Next lecture is on **April 16th**
+  - Next online test is on **April 22nd**, after the next lecture
+
+  `Have a good break!`
+
+````
+
 # 📖 Univariate differentiation
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
